--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -3,16 +3,13 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.0.0</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<groupId>org.ecowatt</groupId>
+		<artifactId>dashboard</artifactId>
+		<version>1.0.0-SNAPSHOT</version>
 	</parent>
-	<groupId>org.ecowatt</groupId>
-	<artifactId>dashboard</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<artifactId>backend</artifactId>
 	<name>dashboard</name>
-	<description>Dashboard Ecowatt</description>
+	<description>Dashboard Ecowatt Backend</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
@@ -40,6 +37,11 @@
 			<groupId>io.projectreactor</groupId>
 			<artifactId>reactor-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.ecowatt</groupId>
+			<artifactId>frontend</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
