implémentation du backend

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,1 +1,10 @@
 
+app:
+  urlOAuth2: https://digital.iservices.rte-france.com/token/oauth/
+  urlEcowatt: https://digital.iservices.rte-france.com/open_api/ecowatt/v4/sandbox/signals
+  secretKey:
+
+logging:
+  level:
+    reactor.netty.http.client: DEBUG
+    #root: DEBUG
