ajout d'un systeme de cache

--- a/config/application.yml
+++ b/config/application.yml
@@ -3,8 +3,13 @@ app:
   urlOAuth2: https://digital.iservices.rte-france.com/token/oauth/
   urlEcowatt: https://digital.iservices.rte-france.com/open_api/ecowatt/v4/sandbox/signals
   secretKey:
+  file: data/lastcall.json
+  dureeCache: 15m
 
-#logging:
-#  level:
+logging:
+  level:
     #reactor.netty.http.client: DEBUG
     #root: DEBUG
+    org.ecowatt.dashboard: DEBUG
+
+
