ajout d'un spinner + build du jar

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,10 +1,8 @@
 
 app:
-  urlOAuth2: https://digital.iservices.rte-france.com/token/oauth/
-  urlEcowatt: https://digital.iservices.rte-france.com/open_api/ecowatt/v4/sandbox/signals
+  urlOAuth2:
+  urlEcowatt:
   secretKey:
+  file:
+  dureeCache:
 
-#logging:
-#  level:
-    #reactor.netty.http.client: DEBUG
-    #root: DEBUG
