--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -12,42 +12,36 @@
 	<name>front</name>
 	<description>Dashboard Ecowatt Frontend</description>
 	<properties>
-<!--		<java.version>17</java.version>-->
 	</properties>
 
 
 	<build>
-<!--		<plugins>-->
-<!--			<plugin>-->
-<!--				<groupId>org.springframework.boot</groupId>-->
-<!--				<artifactId>spring-boot-maven-plugin</artifactId>-->
-<!--			</plugin>-->
     <plugins>
       <plugin>
         <groupId>com.github.eirslett</groupId>
         <artifactId>frontend-maven-plugin</artifactId>
-        <!-- Use the latest released version:
-        https://repo1.maven.org/maven2/com/github/eirslett/frontend-maven-plugin/ -->
         <version>1.9.1</version>
         <executions>
           <execution>
-            <!-- optional: you don't really need execution ids, but it looks nice in your build log. -->
             <id>install node and npm</id>
             <goals>
               <goal>install-node-and-npm</goal>
             </goals>
-            <!-- optional: default phase is "generate-resources" -->
             <phase>generate-resources</phase>
+          </execution>
+          <execution>
+            <id>npm install</id>
+            <goals>
+              <goal>npm</goal>
+            </goals>
+            <phase>generate-resources</phase>
+            <configuration>
+              <arguments>run build</arguments>
+            </configuration>
           </execution>
         </executions>
         <configuration>
           <nodeVersion>v18.12.1</nodeVersion>
-
-          <!-- optional: with node version greater than 4.0.0 will use npm provided by node distribution -->
-<!--          <npmVersion>2.15.9</npmVersion>-->
-
-          <!-- optional: where to download node and npm from. Defaults to https://nodejs.org/dist/ -->
-<!--          <downloadRoot>http://myproxy.example.org/nodejs/</downloadRoot>-->
         </configuration>
       </plugin>
 		</plugins>
