--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -8,7 +8,7 @@
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>backend</artifactId>
-	<name>dashboard</name>
+	<name>dashboard-backend</name>
 	<description>Dashboard Ecowatt Backend</description>
 	<properties>
 		<java.version>17</java.version>
@@ -46,6 +46,8 @@
 	</dependencies>
 
 	<build>
+		<finalName>dashboard-ecowatt-${project.version}</finalName>
+
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
