--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 	<artifactId>frontend</artifactId>
 
-	<name>front</name>
+  <name>dashboard-frontend</name>
 	<description>Dashboard Ecowatt Frontend</description>
 	<properties>
 	</properties>
