--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.ecowatt</groupId>
 		<artifactId>dashboard</artifactId>
-		<version>1.0.0</version>
+		<version>1.1.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>backend</artifactId>
 	<name>dashboard-backend</name>
@@ -41,7 +41,7 @@
 		<dependency>
 			<groupId>org.ecowatt</groupId>
 			<artifactId>frontend</artifactId>
-			<version>1.0.0</version>
+			<version>1.1.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
