ajout de spring security oauth2 client

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -7,3 +7,15 @@ app:
   dureeCache:
   cronRechargement:
 
+spring.security.oauth2.client.registration.ecowatt:
+          authorization-grant-type: client_credentials
+          client-id: ecowatt
+          client-secret: ${app.secretKey}
+
+spring.security.oauth2.client.provider.ecowatt.token-uri: ${app.urlOAuth2}
+
+#security.ignored: /**
+#spring.security.enabled: false
+#management.security.enabled: false
+#security.basic.enabled: false
+
