--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -43,6 +43,15 @@
 			<artifactId>frontend</artifactId>
 			<version>1.1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-client</artifactId>
+		</dependency>
+		<!--		<dependency>-->
+		<!--			<groupId>org.springframework.security</groupId>-->
+		<!--			<artifactId>spring-security-oauth2-client</artifactId>-->
+		<!--			<version>5.3.6.RELEASE</version>-->
+		<!--		</dependency>-->
 	</dependencies>
 
 	<build>
