--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -52,6 +52,11 @@
 		<!--			<artifactId>spring-security-oauth2-client</artifactId>-->
 		<!--			<version>5.3.6.RELEASE</version>-->
 		<!--		</dependency>-->
+<!--		<dependency>-->
+<!--			<groupId>org.eclipse.jetty</groupId>-->
+<!--			<artifactId>jetty-reactive-httpclient</artifactId>-->
+<!--			<version>1.1.6</version>-->
+<!--		</dependency>-->
 	</dependencies>
 
 	<build>
