--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -43,6 +43,11 @@
 			<artifactId>frontend</artifactId>
 			<version>1.1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>io.github.abarhub</groupId>
+			<artifactId>vfs4j-core</artifactId>
+			<version>0.7.4</version>
+		</dependency>
 	</dependencies>
 
 	<build>
