--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.ecowatt</groupId>
 		<artifactId>dashboard</artifactId>
-    <version>1.1.0-SNAPSHOT</version>
+    <version>1.1.0</version>
 	</parent>
 	<artifactId>frontend</artifactId>
 
