--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>org.ecowatt</groupId>
 	<artifactId>dashboard</artifactId>
-	<version>1.1.0-SNAPSHOT</version>
+	<version>1.1.0</version>
 	<packaging>pom</packaging>
 	<name>dashboard</name>
 	<description>Dashboard Ecowatt</description>
@@ -28,7 +28,7 @@
 			<dependency>
 				<groupId>org.ecowatt</groupId>
 				<artifactId>dashboard</artifactId>
-				<version>1.1.0-SNAPSHOT</version>
+				<version>1.1.0</version>
 			</dependency>
 		</dependencies>
 
