correction de la configuration de spring boot avec la version 3.0.1

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -7,7 +7,7 @@ app:
   filename:
   dureeCache:
   cronRechargement:
-  vfs4j.properties:
+  #vfs4jProperties:
 
 #security.ignored: /**
 #spring.security.enabled: false
