--- a/config/application.yml
+++ b/config/application.yml
@@ -19,4 +19,5 @@ logging:
 #    root: DEBUG
     org.ecowatt.dashboard: DEBUG
 
+management.endpoints.web.exposure.include: health,info,prometheus
 
