--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -30,7 +30,17 @@
             <phase>generate-resources</phase>
           </execution>
           <execution>
-            <id>npm install</id>
+            <id>npm install package</id>
+            <goals>
+              <goal>npm</goal>
+            </goals>
+            <phase>generate-resources</phase>
+            <configuration>
+              <arguments>install</arguments>
+            </configuration>
+          </execution>
+          <execution>
+            <id>npm build</id>
             <goals>
               <goal>npm</goal>
             </goals>
